--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Aug 12 17:39:01 WIB 2019
-ndk.dir=/Users/bakwan/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/bakwan/Library/Android/sdk
+# ndk.dir=/Users/bakwan/Library/Android/sdk/ndk-bundle
+# sdk.dir=/Users/bakwan/Library/Android/sdk
